src/App.css
@import url('https://fonts.googleapis.com/css2?family=Liter&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

:root {
    --light-gray: rgb(240, 240, 240);
    --sidebar-width: 275px;
    --dark-gray: var(--dark-gray);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Open Sans", Arial, Helvetica, sans-serif;
    font-weight: 600;
    color: var(--dark-gray);
}

html {
    font-size: 16px;
}

#root {
    background-color: var(--light-gray);
    width: 100%;
    height: 100vh; 
    padding: 15px 0 15px 15px;
    margin: 0;
    
}

button {
    font-weight: 600;
}

a {
    color: var(--dark-gray);;
}

a:hover {
    color: var(--dark-gray);;
}

#sidebar-main {
    width: 100%;
    display: flex;
    position: relative;
}

#sidebar {
    background-color: rgb(255, 255, 255);
    width: var(--sidebar-width);
    height: calc(100vh - 30px);
    border-radius: 10px;
    padding: 30px 30px 0 30px;
    display: flex;
    flex-direction: column;
    position: fixed;
    transition: none;
}

h1 {
    font-size: 1.3rem;
    font-weight: 700;
}


nav {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
    overflow-y: scroll;
}

button {
    cursor: pointer;
}

.category-btns-container {
    width: 100%;
}

.category-btn {
    width: 100%;
    display: flex;
    align-items: center;
    min-height: 32px;
}

.category-btn, #add-category-btn {
    margin: 0 0 10px 0;
}

.category-name, #add-bookmark-btn, #add-subcategory-btn {
    font-size: 1rem;
}

.caret {
    margin-left: 2px;
    padding-left: 4px;
    font-size: 1.3rem;
    margin-right: 20px;
}


.subcategory {
    margin: 0 0 10px 0
}

.category-btn, .subcategory-btn, #add-category-btn, #add-bookmark-btn, #add-subcategory-btn {
    background-color: transparent;
    border: none;
    border-radius: 3px;
    padding: 5px 0 5px 5px;
    text-align: left;
    transition: background-color .3s;
}

.category-btn:hover, .subcategory-btn:hover, .category-btn.active {
    background-color: var(--light-gray);
}

#add-subcategory-bookmark-container {
    display: flex;
    gap: 15px;
}


#add-category-btn {
    margin-top: 30px;
    font-size: 1rem;
}


.subcategory-list {
    padding-left: 5px;
    display: flex;
    flex-direction: column;
    list-style-type: none;
}


.subcategory-btn {
    font-size: .9rem;
    margin-bottom: 8px;
    font-weight: 400;
    cursor: pointer;
}

#main-content {
    flex-basis: 100%;
    padding: 0 30px 0 30px;
    margin-top: 15px;
    margin-left: var(--sidebar-width);
}

#main-content-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 14px;
    background-color: var(--light-gray);
}

h2 {
    font-size: 2.5rem;
    font-weight: 400;
    margin-bottom: 10px;
}

#bookmarks-container {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(450px, 1.5fr));
    gap: 10px;
    padding-bottom: 15px;
}

.bookmark-card {
    background-color: white;
    border-radius: 5px;
    height: 115px;
    transition: background-color .3s;
    cursor: pointer;
    padding: 17px 17px 17px 17px;
    display: flex;
    justify-content: space-between;
    overflow: hidden;
}

.bookmark-card:hover {
    background-color: rgb(255, 255, 212);
}

.card-text {
    max-width: 80%;
}

.card-text > h3 {
    margin-bottom: 7px;
}

.card-text > h3 > a {
    font-weight: 700;
    padding: 0;
    text-decoration: none;
    text-overflow: ellipsis;
    overflow: hidden;
    line-clamp: 2;
    display: -webkit-box;
    -webkit-line-clamp: 2; 
    -webkit-box-orient: vertical;
    white-space: normal;
}

.url-text {
    font-weight: 400;
    font-size: .9rem;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}


.card-btns > button, #delete-category-btn {
    width: 22px;
    background-color: transparent;
    border: none;
    padding: 0;
}

.card-btns > button {
    margin-left: 5px;
}

svg {
    width: 100%;
    display: inline-block;
    fill: rgb(160, 160, 160);
    height: 22px;
}


.card-btns > button > svg.heart-active {
    fill: rgb(50, 50, 50) !important; 
}


.card-btns > button > svg.no-hover:hover {
    fill: rgb(160, 160, 160); 
} */
  
#overlay {
    background-color: rgba(129, 129, 129, 0.251);
    width: 100%;
    height: 100vh;
    z-index: 10;
    position: fixed;
    overflow: auto;
    margin: -15px;
    margin-top: -76px;
}

.modal-background {
    background-color: rgba(129, 129, 129, 0.251);
    width: 100vw;
    height: calc(100% + 76px);
    z-index: 2;
    position: fixed;
    overflow: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: -15px;
    margin-top: -76px;
}

.modal {
    background-color: white;
    width: 500px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.modal-message-name {
    font-style: italic;
}


form > h1 {
    margin: -14px 0 20px 0;
}

form > div {
    width: 80%;
    margin-bottom: 20px;
}

label {
    display: block;
    margin-bottom: 5px;
    font-size: 1.1rem;
}

input, select {
    display: block;
    width: 100%;
    height: 30px;
    padding-left: 5px;
    font-weight: 500;
    font-size: .95rem;
}


.submit-form-btn {
    width: 120px;
    height: 50px;
    margin: 22px 0 25px 0;
    background-color: rgb(222, 222, 222);
    transition: background-color .3s;
    border: none;
    font-size: 1rem;
    font-weight: 700;
}

.submit-form-btn:hover {
    background-color: rgb(190, 190, 190);
}

.close-btn-container {
    display: flex;
    align-self: flex-start;
}

.close-btn, #sidebar-mobile-close {
    background-color: transparent;
    border: none;
    margin: 12px 0 0 20px;
    font-size: 1.1rem;
}

.delete-message-container {
    padding: 30px;
    margin-bottom: -20px;
    line-height: 1.8rem;
}

#category-heading-container {
    display: flex;
    gap: 10px;
}


.hidden {
    display: none !important;
}

#header-mobile {
    display: none;
    background-color: white;
    width: 100vw;
    margin: -15px -15px 15px -15px;
    padding: 15px;
}

#header-mobile > h1 {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

#hamburger-btn {
    width: 22px;
    background-color: transparent;
    border: none;
}

#hamburger-svg {
    width: 100%;
    fill: var(--dark-gray);
    height: 22px;
    margin-top: 5px;
}

.stop-resize-animation * {
    animation: none !important;
    transition: none !important;
  }



#sidebar-mobile-close {
    display: none;
    align-self: flex-end;
    width: 24px;
    margin: 0;
}




/*
*
*
*   Media Queries
*
*
*/

/* Hover effect (Desktop Only) */
@media (hover: hover) {
    .card-btns > button > svg:not(.heart-active):not(.no-hover):hover {
        fill: var(--dark-gray);
    }
}


/* For all touch screen */
@media (hover: none) and (pointer: coarse) { 
    /* Disable hover effects */
    .category-btn:hover, .subcategory-btn:hover, .category-btn.active {
        background-color: transparent;
    }

    .bookmark-card:hover {
        background-color: rgb(255, 255, 255);
    }

    .card-btns > button > svg:hover {
        fill: rgb(160, 160, 160);
    }

    .submit-form-btn:hover {
        background-color: rgb(222, 222, 222);
    }

} 

/* For all non-desktop */
@media (max-width: 800px) {
    body {
        padding: 15px;
    }
    #header-mobile {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }
    h2 {
        font-size: 1.9rem;
    }
    #sidebar {
        left: 0;
        transform: translateX(-100%);
        position: fixed;
        z-index: 99;
        margin: 0;
        transition: transform 0.3s;
    }
    .sidebar-mobile-visible {
        transform: translateX(0) !important;
    }
    #sidebar-mobile-close {
        display: block;
    }
    #nav-heading {
        display: none;
    }
    #main-content {
        margin: 0;
        padding: 0;
    }
    #bookmarks-container {
        grid-template-columns: repeat(auto-fit, minmax(300px, 1.5fr));
    }
    .bookmark-card {
        height: auto;
    }
    .card-text > h3 > a {
        font-size: 1rem;
        line-clamp: 3;
        display: -webkit-box;
        -webkit-line-clamp: 3; 
        -webkit-box-orient: vertical;
        white-space: normal;
    }
    .caret {
        margin-left: 2px;
        padding-left: 4px;
        padding-right: 10px;
        font-size: 1.5rem;
    }
    .modal {
        margin: 15px;
    }


}

@media (max-width: 400px) {
    #main-content-header{
        flex-direction: column;
    }
    .card-text {
        max-width: 68%;
    }
}

@media (min-width: 401px) and (max-width: 639px) {
    .card-text {
        max-width: 75%;
    }
}


@media (min-width: 640px) and (max-width: 800px) {
    .card-text {
        max-width: 65%;
    }
}

